trying to fix ranking btn on mobile

--- a/src/styles/ranking.css
+++ b/src/styles/ranking.css
@@ -1,12 +1,12 @@
 /* Botão para abrir o Ranking */
 .ranking-svg-container {
-  align-self: flex-start;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 20px;
-  margin-top: auto;
-  margin-bottom: 10px;
   background: linear-gradient(
     to right,
     var(--color-tropical-mint),
